--- a/tmux.conf
+++ b/tmux.conf
@@ -1,36 +1,16 @@
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-### LOOK & FEEL ###
-set -g default-terminal "xterm-256color"
-
-# default statusbar colors
-set-option -g status-bg colour25
-set-option -g status-fg colour179
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244
-set-window-option -g window-status-bg default
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235
-set-option -g pane-active-border-fg colour240
-
-# pane number display
-set-option -g display-panes-active-colour colour33
-set-option -g display-panes-colour colour166
-
-# clock
-set-window-option -g clock-mode-colour colour64
+set -g default-shell $SHELL 
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-option -g mode-mouse on
+
+# maximizing and restoring panes
+unbind Up
+bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+unbind Down
+bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+
 
 set-window-option -g utf8 on
 
@@ -43,8 +23,6 @@ set -sg escape-time 0
 #count windows and panes from 1
 set -g base-index 1
 setw -g pane-base-index 1
-
-
 
 ### KEYS ###
 
@@ -77,29 +55,24 @@ bind r source-file ~/.tmux.conf; display "Reloaded"
 bind Escape copy-mode
 bind p paste-buffer
 
-#unbind [
-#bind [ previous-window
-#
-#unbind ]
-#bind ] next-window
+unbind [
+bind [ previous-window
+
+unbind ]
+bind ] next-window
 
 unbind o
 bind o select-pane -t :.-
 
 bind C-q command-prompt -I "htop" -p "Quick window command: " "new-window '%%'"
 
-bind C-c run "tmux save-buffer - | pbcopy"
-bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
+# bind C-c run "tmux save-buffer - | pbcopy"
+# bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
 
 bind C-s choose-session
 
-
 # Count sessions start at 1
 set -g base-index 1
-
-# Set the title bar
-set -g set-titles on
-set -g set-titles-string '#(whoami) :: #h :: #(curl ipecho.net/plain;echo)'
 
 # Set status bar
 set -g status-utf8 on
@@ -108,7 +81,7 @@ set -g status-fg white
 set -g status-interval 5 
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "::#[fg=Green]#(whoami)#[fg=white]::#[fg=red]#(hostname -s)#[fg=white]::#[fg=yellow]#(curl ipecho.net/plain;echo)::"
+set -g status-left "::#[fg=Green]#(whoami)#[fg=white]:-:#[fg=red]#(hostname -s)#[fg=white]::#[fg=yellow]#(curl ipecho.net/plain;echo)::"
 set -g status-justify left
 set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
 
@@ -122,3 +95,36 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+
+
+
+
+
+set -g status-bg 'colour235'
+set -g message-command-fg 'colour222'
+set -g status-justify 'centre'
+set -g status-left-length '100'
+set -g status 'on'
+set -g pane-active-border-fg 'colour154'
+set -g message-bg 'colour238'
+set -g status-right-length '100'
+set -g status-right-attr 'none'
+set -g message-fg 'colour222'
+set -g message-command-bg 'colour238'
+set -g status-attr 'none'
+set -g status-utf8 'on'
+set -g pane-border-fg 'colour238'
+set -g status-left-attr 'none'
+setw -g window-status-fg 'colour121'
+setw -g window-status-attr 'none'
+setw -g window-status-activity-bg 'colour235'
+setw -g window-status-activity-attr 'none'
+setw -g window-status-activity-fg 'colour154'
+setw -g window-status-separator ''
+setw -g window-status-bg 'colour235'
+set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]»#[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]»#[fg=colour121,bg=colour235] #(whoami) » #(uptime  | cut -d " " -f 1,2,3) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]»'
+set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]»#[fg=colour121,bg=colour235] %r » %a » %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]»#[fg=colour222,bg=colour238] #H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]»#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
+setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]»#[default] #I » #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]»'
+setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]»#[fg=colour222,bg=colour238] #I » #W » #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]»'
+
