--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 set -g default-shell $SHELL 
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
+set-option -g mouse-resize-pane on
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-option -g mode-mouse on
